--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="#dashboard" class="nav-link px-2 text-white li">Dashboard</a></li>
           <li><a href="./pricing.html" class="nav-link px-2 text-white li">Pricing</a></li>
           <li><a href="./contactus.html" class="nav-link px-2 text-white li">Contact Us</a></li>
-          <li><a href="./pricing.html" class="nav-link px-2 text-white li">About Us</a></li>
+          <li><a href="./Aboutus.html" class="nav-link px-2 text-white li">About Us</a></li>
           
         </ul>
 
@@ -170,13 +170,13 @@
     </div>
     <div class="container5">
       <h1 class="courses">Universities</h1>
-      <div class="img3"><h2><img src="./images/du.jpeg" ><p class="img4">University of Delhi</p></h2>
-      <h3>fddf</h3>
+      <div class="img3"><h2><a href="https://dlis.du.ac.in/"><img src="./images/du.jpeg" ></a><p class="img4">University of Delhi</p></h2>
+      <h3></h3>
      
       </div>
-      <div class="img3"><h2><img src="./images/iit.jpeg" ><p class="img4">IIT Delhi</p></h2></div>
-      <div class="img3"><h2><img src="./images/vtu.jpeg" ><p class="img4">Visvesvaraya Technological University</p></h2></div>
-      <div class="img3"><h2><img src="./images/ignou.jpeg" width="300px" height="215px"><p class="img4">IGNOU</p></h2></div>
+      <div class="img3"><h2><a href="https://library.iitd.ac.in/"><img src="./images/iit.jpeg" ></a><p class="img4">IIT Delhi</p></h2></div>
+      <div class="img3"><h2><a href="https://backbencher.club/cbcs-notes/"><img src="./images/vtu.jpeg" ></a><p class="img4">Visvesvaraya Technological University</p></h2></div>
+      <div class="img3"><h2><a href="http://www.ignou.ac.in/ignou/aboutignou/division/ldd/introduction"><img src="./images/ignou.jpeg" width="300px" height="215px"></a><p class="img4">IGNOU</p></h2></div>
      </div>
  
 
